--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "express-validator": "^7.2.1",
     "mongodb": "^6.16.0",
     "node": "^22.16.0",
     "nodemon": "^3.1.10",
