--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "express": "^5.1.0",
     "express-validator": "^7.2.1",
     "mongodb": "^6.16.0",
+    "mongoose": "^8.15.1",
     "node": "^22.16.0",
     "nodemon": "^3.1.10",
+    "oauth2-server": "^3.1.1",
     "swagger": "^0.0.1",
     "swagger-autogen": "^2.23.7",
     "swagger-ui-express": "^5.0.1"
