--- a/package.json
+++ b/package.json
@@ -18,14 +18,20 @@
   },
   "homepage": "https://github.com/feippe/CSE341-project#readme",
   "dependencies": {
+    "bcrypt": "^6.0.0",
+    "connect-mongo": "^5.1.0",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "express-session": "^1.18.1",
     "express-validator": "^7.2.1",
     "mongodb": "^6.16.0",
     "mongoose": "^8.15.1",
     "node": "^22.16.0",
     "nodemon": "^3.1.10",
     "oauth2-server": "^3.1.1",
+    "passport": "^0.7.0",
+    "passport-github2": "^0.1.12",
+    "passport-google-oauth20": "^2.0.0",
     "swagger": "^0.0.1",
     "swagger-autogen": "^2.23.7",
     "swagger-ui-express": "^5.0.1"
